fix: overflow on mobile navigation

--- a/css/general.css
+++ b/css/general.css
@@ -57,6 +57,7 @@ WHITESPACE
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 body {
   font-family: 'Rubik', sans-serif;
